[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sepsisim"
version = "0.1.0"
description = "Gymnasium environments for reinforcement learning in sepsis management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Hass Dhia", email = "partners@smarttechinvest.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "gymnasium>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]
train = ["stable-baselines3>=2.0", "torch>=2.0"]
all = ["sepsisim[dev,train]"]

[project.urls]
Repository = "https://github.com/HassDhia/sepsisim"
Documentation = "https://github.com/HassDhia/sepsisim#readme"

[project.scripts]
sepsisim-train = "sepsisim.agents.ppo:main"
sepsisim-benchmark = "sepsisim.benchmarks.runner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sepsisim"]

[tool.hatch.build.targets.sdist]
exclude = [
    "results/",
    "paper/",
    ".venv/",
    ".claude/",
    "*.pt",
    "*.zip",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 99
